Closed
Bug 807174
Opened 13 years ago
Closed 13 years ago
Drop-down list used inside a frameset document renders outside the frame
Categories
(Core :: Layout: Form Controls, defect)
Tracking
()
People
(Reporter: epinal99-bugzilla2, Assigned: MatsPalmgren_bugz)
References
Details
(Keywords: regression, testcase, Whiteboard: Regressed by 575294)
Attachments
(3 files)
1.17 KB,
text/html
|
Details | |
25.42 KB,
image/png
|
Details | |
1.54 KB,
patch
|
roc
:
review+
lsblakk
:
approval-mozilla-aurora+
lsblakk
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
STR:
1) Open the testcase
2) Click on the drop-down list displayed in the footer
Result:
With FF16+, the drop-down list is rendered outside the frame (and the Firefox window sometimes).
Mozregression range:
m-c
good=2012-06-23
bad=2012-06-24
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=bb4b37094b9f&tochange=cb2904476d14
m-i
good=2012-06-22
bad=2012-06-23
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=a7621ccb684e&tochange=daf9c42be518
Suspected bug:
Robert O'Callahan — Bug 766007. Create scrollframes for frameset documents. r=tnikkel
For the record, utf-8 translation of base64 part from the testcase:
<html>
<body>
<select name="testdropdown" style="width:150px;" >
<option value="1">option 1</option>
<option value="2">option 2</option>
<option value="3">option 3</option>
<option value="4">option 4</option>
<option value="5">option 5</option>
<option value="6">option 6</option>
<option value="7">option 7</option>
<option value="8">option 8</option>
<option value="9">option 9</option>
</select>
</body>
</html>
Reporter: http://forums.mozillazine.org/viewtopic.php?f=25&t=2592587
Blocks: 766007
tracking-firefox16:
--- → ?
tracking-firefox17:
--- → ?
tracking-firefox18:
--- → ?
tracking-firefox19:
--- → ?
Keywords: regression,
testcase
![]() |
||
Comment 3•13 years ago
|
||
Regression window(m-i)
Good:
http://hg.mozilla.org/integration/mozilla-inbound/rev/80b8680bda1c
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:16.0) Gecko/16.0 Firefox/16.0 ID:20120622175046
Bad:
http://hg.mozilla.org/integration/mozilla-inbound/rev/c35d2d3071ac
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:16.0) Gecko/16.0 Firefox/16.0 ID:20120622182843
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=80b8680bda1c&tochange=c35d2d3071ac
In local build:
Last Good: e3676fde39a8
First Bad: 23f5c88adb8f
Triggered by:
23f5c88adb8f Mats Palmgren — Bug 575294. part=2/5 r=smaug,roc
![]() |
||
Updated•13 years ago
|
OS: Windows 7 → All
![]() |
||
Updated•13 years ago
|
Blocks: CVE-2012-3984
Assignee | ||
Updated•13 years ago
|
Assignee: nobody → matspal
Assignee | ||
Comment 4•13 years ago
|
||
Use GetToplevelContentDocumentPresContext() instead of the pres context
of the combobox when calculating the available space.
Attachment #676891 -
Flags: review?(roc)
Attachment #676891 -
Flags: review?(roc) → review+
Assignee | ||
Comment 5•13 years ago
|
||
Comment 7•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
Comment 8•13 years ago
|
||
Would consider late beta uplift nomination since this has a testcase and is easily verifiable by QA.
status-firefox16:
--- → wontfix
status-firefox17:
--- → affected
status-firefox18:
--- → affected
status-firefox19:
--- → fixed
Assignee | ||
Comment 9•13 years ago
|
||
Comment on attachment 676891 [details] [diff] [review]
fix
[Approval Request Comment]
Bug caused by (feature/regressing bug #): 575294
User impact if declined: cosmetic layout error for combobox menu in an edge case, the control should still be usable without the fix
Testing completed (on m-c, etc.): on m-c since 2012-10-31
Risk to taking this patch (and alternatives if risky): low risk
String or UUID changes made by this patch: none
Attachment #676891 -
Flags: approval-mozilla-beta?
Attachment #676891 -
Flags: approval-mozilla-aurora?
Comment 10•13 years ago
|
||
Comment on attachment 676891 [details] [diff] [review]
fix
Please land asap so this gets into tomorrow's beta.
Attachment #676891 -
Flags: approval-mozilla-beta?
Attachment #676891 -
Flags: approval-mozilla-beta+
Attachment #676891 -
Flags: approval-mozilla-aurora?
Attachment #676891 -
Flags: approval-mozilla-aurora+
Assignee | ||
Comment 11•13 years ago
|
||
Comment 12•13 years ago
|
||
Verified fixed on Firefox 18 beta 4.
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:18.0) Gecko/20100101 Firefox/18.0
Build ID: 20121212073002
QA Contact: manuela.muntean
You need to log in
before you can comment on or make changes to this bug.
Description
•