Bug 807174 - Drop-down list used inside a frameset document renders outside the frame.  r=roc